tools/tests/errors/surf_lib_13.ki
# gzip.decompress of data with the wrong magic must throw.
var g = import("gzip")
discard g.decompress(Bytes([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]))
